************

* Support ``--directory`` option for a number of additional commands:
  conflicts, merge-directive, missing, resolve, shelve, switch,
  unshelve, whoami. (Martin von Gagern, #527878)

Bug Fixes
*********

* ``bzr init`` does not recursively scan directory contents anymore
  leading to faster init for directories with existing content.
  (Martin [gz], Parth Malwankar, #501307)

* Final fix for 'no help for command' issue. We now show a clean message
  when a command has no help, document how to set help more clearly, and
  test that all commands available to the test suite have help.
  (Robert Collins, #177500)

* Explicitly removing ``--profile-imports`` option from parsed command-line
  arguments on Windows, because bzr script does the same.
  (Alexander Belchenko, #588277)

Improvements
************

* Use lazy imports in ``bzrlib/merge.py`` so that plugins like ``news_merge``
  do not cause modules to be loaded unnecessarily just because the plugin
  registers a merge hook.  This improves ``bzr rocks`` time by about 25%
  in a default installation (with just the core plugins).
  (Andrew Bennetts)

Documentation
*************

* Added ``regression`` tag to our tags list. (Robert Collins)

* Improved our release checklist to have a bit less churn and leave things
  ready-to-go for the next action (including other people doing
  development). (Robert Collins)

API Changes
***********

* ``bzrlib.knit.KnitSequenceMatcher``, which has been deprecated since
  2007, has been deleted.  Use ``PatienceSequenceMatcher`` from
  ``bzrlib.patiencediff`` instead.
  (Andrew Bennetts)

Internals
*********

Testing
*******


bzr 2.2b3
#########

:2.2b3: 2010-05-28

This third beta in the 2.2 series brings with it all the goodness of 2.1.2
and 2.0.6 (though it preceeds 2.0.6 slightly). Of particular note for
users are compatibility fixes with bzr 1.5 and below servers, a hopeful
end to the EINTR errors caused by SIGWINCH interactions, a shiny new